<resources>
    <string name="app_name">Wallpaper Gallery</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="history">History</string>
    <string name="search">Search</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="rubengallery">RubenGallery</string>
    <string name="tagline_text">Make your phone more beautiful</string>
    <string name="logo">Logo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category">CATEGORY</string>
    <string name="random">RANDOM</string>
    <string name="author_s">AUTHOR\'S</string>
</resources>